--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       <section class="recruit section">
         <div class="recruit_inner">
           <h3>Recruit<br><small>採用について</small></h3>
-          <h4>私たちは、多様な仲間と、これからをつくる多才な会社でありたい。
+          <h4>私たちは、多様な仲間と、これからをつくる多才な会社でありたい。<br>
             そんな会社で一緒に働く仲間を募集しています。</h4>
           <p>私たちがスローガンとする、“in various parts”の“parts”は、「多才」も意味しています。</p>
           <p class="btn"><a href="html/recruit.html">採用情報</a></p>
